# moegirl-yomitan

./: .gitignore  README.md  pyproject.toml  release.bat
.github/workflows/: build.yml
moegirl_yomitan/: __init__.py  cli.py  config.py  fetcher.py  models.py  packaging.py  sitemaps.py  text.py  versioning.py
tests/: test_cli.py  test_fetcher.py  test_packaging.py  test_sitemaps.py  test_text.py  test_workflow.py
